# src/app/services/models.ts
@@ -10,7 +10,6 @@ export { EntityModelRole } from './models/entity-model-role';
 export { EntityModelStock } from './models/entity-model-stock';
 export { EntityModelToken } from './models/entity-model-token';
 export { EntityModelUser } from './models/entity-model-user';
-export { FinancialInfo } from './models/financial-info';
 export { GrantedAuthority } from './models/granted-authority';
 export { Item } from './models/item';
 export { JsonSchema } from './models/json-schema';
@@ -23,14 +22,10 @@ export { PagedModelEntityModelUser } from './models/paged-model-entity-model-use
 export { PageMetadata } from './models/page-metadata';
 export { RegistrationRequest } from './models/registration-request';
 export { RepresentationModelObject } from './models/representation-model-object';
-export { Role } from './models/role';
 export { RoleRequestBody } from './models/role-request-body';
 export { RoleResponse } from './models/role-response';
-export { Stock } from './models/stock';
 export { StockDto } from './models/stock-dto';
 export { StockRequestBody } from './models/stock-request-body';
 export { StockResponse } from './models/stock-response';
 export { TokenRequestBody } from './models/token-request-body';
-export { TradeHistory } from './models/trade-history';
-export { User } from './models/user';
 export { UserRequestBody } from './models/user-request-body';
