# src/app/services/models/trade-history.ts
@@ -1,12 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import { Stock } from '../models/stock';
-export interface TradeHistory {
-  createdDate?: string;
-  date?: string;
-  endStockPrice?: string;
-  id?: number;
-  lastModifiedDate?: string;
-  startStockPrice?: string;
-  stock?: Stock;
-}
