# src/app/services/models/user.ts
@@ -1,25 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import { GrantedAuthority } from '../models/granted-authority';
-import { Role } from '../models/role';
-import { Stock } from '../models/stock';
-export interface User {
-  accountLocked?: boolean;
-  accountNonExpired?: boolean;
-  accountNonLocked?: boolean;
-  authorities?: Array<GrantedAuthority>;
-  createdDate?: string;
-  credentialsNonExpired?: boolean;
-  dateOfBirth?: string;
-  email?: string;
-  enabled?: boolean;
-  firstname?: string;
-  id?: number;
-  lastModifiedDate?: string;
-  lastname?: string;
-  name?: string;
-  password?: string;
-  roles?: Array<Role>;
-  stocks?: Array<Stock>;
-  username?: string;
-}
