# src/openapi/openapi.json
@@ -2002,10 +2002,10 @@
                 }
             }
         },
-        "/fetch-and-save-stocks": {
+        "/stock/fetch-and-save-stocks": {
             "post": {
                 "tags": [
-                    "stock-controller"
+                    "Stock"
                 ],
                 "operationId": "fetchAndSaveStocks",
                 "responses": {
@@ -2085,25 +2085,25 @@
                 }
             }
         },
-        "/addUser": {
-            "post": {
+        "/user/name": {
+            "get": {
                 "tags": [
                     "user-controller"
                 ],
-                "operationId": "addPerson",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/User"
-                            }
-                        }
-                    },
-                    "required": true
-                },
+                "operationId": "getUserName",
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "content": {
+                            "application/hal+json": {
+                                "schema": {
+                                    "type": "object",
+                                    "additionalProperties": {
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -2214,109 +2214,9 @@
                     }
                 }
             },
-            "FinancialInfo": {
+            "EntityModelStock": {
                 "type": "object",
                 "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "createdDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "lastModifiedDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "year": {
-                        "type": "string"
-                    },
-                    "quarter": {
-                        "type": "string"
-                    },
-                    "per": {
-                        "type": "number"
-                    },
-                    "revenue": {
-                        "type": "number"
-                    },
-                    "profit": {
-                        "type": "number"
-                    },
-                    "eps": {
-                        "type": "number"
-                    },
-                    "der": {
-                        "type": "number"
-                    },
-                    "roe": {
-                        "type": "number"
-                    },
-                    "currentRatio": {
-                        "type": "number"
-                    },
-                    "quickRatio": {
-                        "type": "number"
-                    },
-                    "grossProfitMargin": {
-                        "type": "number"
-                    },
-                    "operatingProfitMargin": {
-                        "type": "number"
-                    },
-                    "netProfitMargin": {
-                        "type": "number"
-                    },
-                    "roa": {
-                        "type": "number"
-                    },
-                    "dividend": {
-                        "type": "number"
-                    },
-                    "freeCashFlow": {
-                        "type": "number"
-                    },
-                    "stock": {
-                        "$ref": "#/components/schemas/Stock"
-                    }
-                }
-            },
-            "GrantedAuthority": {
-                "type": "object",
-                "properties": {
-                    "authority": {
-                        "type": "string"
-                    }
-                }
-            },
-            "Role": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "name": {
-                        "type": "string"
-                    },
-                    "createdDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "lastModifiedDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    }
-                }
-            },
-            "Stock": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
                     "createdDate": {
                         "type": "string",
                         "format": "date-time"
@@ -2343,140 +2243,6 @@
                     "price": {
                         "type": "number"
                     },
-                    "tradeHistories": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/TradeHistory"
-                        }
-                    },
-                    "financialInfos": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/FinancialInfo"
-                        }
-                    }
-                }
-            },
-            "TradeHistory": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "createdDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "lastModifiedDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "date": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "stock": {
-                        "$ref": "#/components/schemas/Stock"
-                    },
-                    "endStockPrice": {
-                        "type": "string"
-                    },
-                    "startStockPrice": {
-                        "type": "string"
-                    }
-                }
-            },
-            "User": {
-                "type": "object",
-                "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "firstname": {
-                        "type": "string"
-                    },
-                    "lastname": {
-                        "type": "string"
-                    },
-                    "dateOfBirth": {
-                        "type": "string",
-                        "format": "date"
-                    },
-                    "email": {
-                        "type": "string"
-                    },
-                    "password": {
-                        "type": "string"
-                    },
-                    "accountLocked": {
-                        "type": "boolean"
-                    },
-                    "enabled": {
-                        "type": "boolean"
-                    },
-                    "roles": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Role"
-                        }
-                    },
-                    "stocks": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/Stock"
-                        }
-                    },
-                    "createdDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "lastModifiedDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "name": {
-                        "type": "string"
-                    },
-                    "username": {
-                        "type": "string"
-                    },
-                    "authorities": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/GrantedAuthority"
-                        }
-                    },
-                    "accountNonExpired": {
-                        "type": "boolean"
-                    },
-                    "accountNonLocked": {
-                        "type": "boolean"
-                    },
-                    "credentialsNonExpired": {
-                        "type": "boolean"
-                    }
-                }
-            },
-            "EntityModelToken": {
-                "type": "object",
-                "properties": {
-                    "token": {
-                        "type": "string"
-                    },
-                    "createdAt": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "expiresAt": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "validatedAt": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
                     "_links": {
                         "$ref": "#/components/schemas/Links"
                     }
@@ -2500,6 +2266,59 @@
                     "number": {
                         "type": "integer",
                         "format": "int64"
+                    }
+                }
+            },
+            "PagedModelEntityModelStock": {
+                "type": "object",
+                "properties": {
+                    "_embedded": {
+                        "type": "object",
+                        "properties": {
+                            "stocks": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/components/schemas/EntityModelStock"
+                                }
+                            }
+                        }
+                    },
+                    "_links": {
+                        "$ref": "#/components/schemas/Links"
+                    },
+                    "page": {
+                        "$ref": "#/components/schemas/PageMetadata"
+                    }
+                }
+            },
+            "GrantedAuthority": {
+                "type": "object",
+                "properties": {
+                    "authority": {
+                        "type": "string"
+                    }
+                }
+            },
+            "EntityModelToken": {
+                "type": "object",
+                "properties": {
+                    "token": {
+                        "type": "string"
+                    },
+                    "createdAt": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "expiresAt": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "validatedAt": {
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "_links": {
+                        "$ref": "#/components/schemas/Links"
                     }
                 }
             },
@@ -2644,62 +2463,6 @@
                     }
                 }
             },
-            "EntityModelStock": {
-                "type": "object",
-                "properties": {
-                    "createdDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "lastModifiedDate": {
-                        "type": "string",
-                        "format": "date-time"
-                    },
-                    "name": {
-                        "type": "string"
-                    },
-                    "symbol": {
-                        "type": "string"
-                    },
-                    "sector": {
-                        "type": "string"
-                    },
-                    "industry": {
-                        "type": "string"
-                    },
-                    "exchange": {
-                        "type": "string"
-                    },
-                    "price": {
-                        "type": "number"
-                    },
-                    "_links": {
-                        "$ref": "#/components/schemas/Links"
-                    }
-                }
-            },
-            "PagedModelEntityModelStock": {
-                "type": "object",
-                "properties": {
-                    "_embedded": {
-                        "type": "object",
-                        "properties": {
-                            "stocks": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/components/schemas/EntityModelStock"
-                                }
-                            }
-                        }
-                    },
-                    "_links": {
-                        "$ref": "#/components/schemas/Links"
-                    },
-                    "page": {
-                        "$ref": "#/components/schemas/PageMetadata"
-                    }
-                }
-            },
             "PagedModelEntityModelUser": {
                 "type": "object",
                 "properties": {
@@ -2722,25 +2485,6 @@
                     }
                 }
             },
-            "CollectionModelStock": {
-                "type": "object",
-                "properties": {
-                    "_embedded": {
-                        "type": "object",
-                        "properties": {
-                            "stocks": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/components/schemas/StockResponse"
-                                }
-                            }
-                        }
-                    },
-                    "_links": {
-                        "$ref": "#/components/schemas/Links"
-                    }
-                }
-            },
             "CollectionModelRole": {
                 "type": "object",
                 "properties": {
@@ -2751,6 +2495,25 @@
                                 "type": "array",
                                 "items": {
                                     "$ref": "#/components/schemas/RoleResponse"
+                                }
+                            }
+                        }
+                    },
+                    "_links": {
+                        "$ref": "#/components/schemas/Links"
+                    }
+                }
+            },
+            "CollectionModelStock": {
+                "type": "object",
+                "properties": {
+                    "_embedded": {
+                        "type": "object",
+                        "properties": {
+                            "stocks": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/components/schemas/StockResponse"
                                 }
                             }
                         }
